fix: social icons layout bug

--- a/src/assets/scss/components/social-icons.scss
+++ b/src/assets/scss/components/social-icons.scss
@@ -10,7 +10,6 @@
         padding: 0;
         margin-left: -1rem;
         margin-inline-start: -1rem;
-        display: inline-flex;
 
         li {
             margin: 0;
